Fix LRC file selection on iOS by removing accept attribute
- Removed accept attribute from lyrics file input
- iOS was blocking .lrc file selection due to strict MIME type filtering
- File input now accepts any file type, allowing .lrc files to be selected

--- a/src/pages/rehearsal-studio.astro
+++ b/src/pages/rehearsal-studio.astro
@@ -62,7 +62,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 							Load Lyrics (LRC)
 						</label>
 						<div class="file-input-wrapper">
-							<input type="file" id="lyrics-file" accept=".lrc,.txt" />
+							<input type="file" id="lyrics-file" />
 							<button id="server-lyrics-download" class="server-download-btn hidden" title="Newer lyrics available on server">
 								<svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
 									<path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
